--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: chatview
 description: A Flutter package that allows you to integrate Chat View with highly customization options.
-version: 1.2.2
+version: 1.2.3
 issue_tracker: https://github.com/SimformSolutionsPvtLtd/flutter_chatview/issues
 repository: https://github.com/SimformSolutionsPvtLtd/flutter_chatview
 
@@ -23,7 +23,7 @@ dependencies:
   flutter_linkify: 6.0.0
   url_launcher: ^6.1.7
   emoji_picker_flutter: ^1.6.0
-  http: 1.0.0
+  http: ^0.13.6
   html: ^0.15.1
   any_link_preview: ^3.0.0
   progress_indicators: ^1.0.0
